# membership

./: .gitignore  Cargo.toml  README.md
etc/: config.json
src/: lib.rs  main.rs
src/gossip/: client.rs  server.rs
