[package]
name = "membership"
version = "0.1.0"
authors = ["heeki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"